tests/paczka2/big_fuzzy/53733904.err
Error in line 1: AeX5C S766 13,2
Error in line 12: S766 S804 81,0
Error in line 30: S766 S766 26,8
Error in line 32: S766 S804 18,7
Error in line 48: nxp A258 5,7
Error in line 51: AeX5C A919 86,2
Error in line 55: a967ftM S766 95,7
Error in line 65: S766 S804 50,40
Error in line 66: a967ftM A258 49,6
Error in line 63: S766 S766 7,7
Error in line 83: LBiJkIS2 S804 35,8
Error in line 81: wSiQWCi3Jfd S804 92,1
Error in line 82: S766 S804 209,5
Error in line 89: wSiQWCi3Jfd A258 73,1
Error in line 62: S13v5jLq7 A919 1,6
Error in line 98: wSiQWCi3Jfd S766 74,0
Error in line 113: AeX5C A919 66,8
Error in line 117: a967ftM S804 276,5
Error in line 107: LBiJkIS2 A919 83,3
Error in line 124: a967ftM S766 22,5
Error in line 137: AeX5C S766 81,4
Error in line 136: a967ftM A258 16,8
Error in line 147: wSiQWCi3Jfd S766 88,3
Error in line 152: wSiQWCi3Jfd A258 68,2
Error in line 153: wSiQWCi3Jfd A919 41,7
Error in line 155: wSiQWCi3Jfd A258 5,3
Error in line 161: S766 A919 24,9
Error in line 176: S766 S804 18,6
Error in line 172: a967ftM A258 82,4
Error in line 181: S13v5jLq7 S766 87,72
Error in line 187: S766 A258 15,42
Error in line 190: LBiJkIS2 A919 84,6
Error in line 185: nxp A258 71,3
Error in line 200: nxp S804 82,3
Error in line 186: a967ftM A258 71,9
Error in line 208: a967ftM S804 85,8
Error in line 205: S13v5jLq7 S766 1,6
Error in line 202: nxp A919 62,3
Error in line 220: nxp A919 3,17
Error in line 218: nxp A919 1,9
Error in line 217: S13v5jLq7 A258 59,2
Error in line 192: S766 A258 5,0
Error in line 223: LBiJkIS2 A258 51,0
Error in line 241: S766 S804 80,5
